2015-04-15  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* omp/omp.c (omp_create_task_ext): Check and insert correct id for
	schedules.

2015-04-10  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/osp.c (osp_start_scan): Take result pointer as function argument.
	Return int for success or failure.

	* base/osp.h: Adjust function prototype.

2015-04-10  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/exec.c (exec_nasl_script): Don't set script name in script_infos
	arglist.

	* nasl/nasl_debug.c (nasl_perror): Get script name from nvticache.

2015-04-09  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvticache.c (nvticache_get): Cache nvt dependencies.
	(nvticache_get_dependencies): New function.

	* base/nvticache.h: Add function prototype.

2015-04-09  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_scanner_glue.c (script_tag): Use nasl_perror() to report
	error, and return directly after that.

2015-04-09  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvticache.c (nvticache_get): Cache nvt excluded_keys,
	mandatory_keys, required_keys, required_ports, required_udp_ports,
	category and timeout.
	(nvticache_get_required_keys, nvticache_get_mandatory_keys)
	(nvticache_get_excluded_keys, nvticache_get_required_udp_ports)
	(nvticache_get_required_ports, nvticache_get_category)
	(nvticache_get_timeout): New functions.

	* base/nvticache.h: Add functions prototypes.

2015-04-08  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_scanner_glue.c (script_tag): Add log message when tag
	value contains | separator.

2015-04-08  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvticache.c (nvticache_get_oid): Fix pattern to search for
	filename when not exact name is not found.

2015-04-07  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/nvticache.c: Fix include path to make it build.

2015-04-07  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post branch version bump.
