@@ -1679,13 +1679,15 @@ exec_nasl_script (struct arglist *script_infos, const char *name,
 {
   naslctxt ctx;
   nasl_func *pf;
-  int err = 0, to;
+  int err = 0;
   tree_cell *ret;
   lex_ctxt *lexic;
   gchar *old_dir;
   gchar *newdir;
+  char *old;
   tree_cell tc;
   const char *str;
+  int to;
 
   srand48 (getpid () + getppid () + (long) time (NULL));
 
@@ -1694,6 +1696,13 @@ exec_nasl_script (struct arglist *script_infos, const char *name,
 #if NASL_DEBUG > 2
   nasl_trace_fp = stderr;
 #endif
+  if ((old = arg_get_value (script_infos, "script_name")) == NULL)
+    arg_add_value (script_infos, "script_name", ARG_STRING, g_strdup (name));
+  else
+    {
+      g_free (old);
+      arg_set_value (script_infos, "script_name", g_strdup (name));
+    }
 
   newdir = g_path_get_dirname (name);
 
