@@ -20,7 +20,7 @@
 #include <stdarg.h>
 #include <unistd.h>
 
-#include "../base/nvticache.h"
+#include "../misc/arglists.h"
 
 #include "nasl_tree.h"
 #include "nasl_global_ctxt.h"
@@ -41,17 +41,20 @@ nasl_perror (lex_ctxt * lexic, char *msg, ...)
 {
   va_list param;
   char debug_message[4096];
-  char *script_name = NULL;
+  char *script_name = "";
 
   va_start (param, msg);
 
-  if (nvticache_initialized ())
-    script_name = nvticache_get_src (lexic->oid);
+  if (lexic != NULL)
+    {
+      script_name = arg_get_value (lexic->script_infos, "script_name");
+      if (script_name == NULL)
+        script_name = "";
+    }
 
   vsnprintf (debug_message, sizeof (debug_message), msg, param);
-  log_legacy_write ("[%d](%s:%d) %s", getpid (), script_name ?: "",
+  log_legacy_write ("[%d](%s:%d) %s", getpid (), script_name,
                     lexic ? lexic->line_nb : 0, debug_message);
-  g_free (script_name);
 
   /** @todo Enable this when the NVTs are ready.  Sends ERRMSG to client. */
 #if 0
@@ -86,25 +89,28 @@ nasl_trace (lex_ctxt * lexic, char *msg, ...)
 {
   va_list param;
   char debug_message[4096];
-  char *script_name = NULL, *p;
+  char *script_name = "", *p;
 
   if (nasl_trace_fp == NULL)
     return;
   va_start (param, msg);
 
-  if (nvticache_initialized ())
-    script_name = nvticache_get_src (lexic->oid);
+  if (lexic != NULL)
+    {
+      script_name = arg_get_value (lexic->script_infos, "script_name");
+      if (script_name == NULL)
+        script_name = "";
+    }
 
   vsnprintf (debug_message, sizeof (debug_message), msg, param);
   for (p = debug_message; *p != '\0'; p++)
     ;
   if (p == debug_message || p[-1] != '\n')
-    fprintf (nasl_trace_fp, "[%d](%s) %s\n", getpid (), script_name ?: "",
+    fprintf (nasl_trace_fp, "[%d](%s) %s\n", getpid (), script_name,
              debug_message);
   else
-    fprintf (nasl_trace_fp, "[%d](%s) %s", getpid (), script_name ?: "",
+    fprintf (nasl_trace_fp, "[%d](%s) %s", getpid (), script_name,
              debug_message);
-  g_free (script_name);
 
   va_end (param);
 }
